<resources>
    <string name="app_name">Day Counter</string>
    <plurals name="days_since">
        <item quantity="one">day since %1$s</item>
        <item quantity="other">days since %1$s</item>
    </plurals>
    <plurals name="days_until">
        <item quantity="one">day until %1$s</item>
        <item quantity="other">days until %1$s</item>
    </plurals>
    <plurals name="there_has_have_been">
        <item quantity="one">There has been</item>
        <item quantity="other">There have been</item>
    </plurals>
    <plurals name="there_is_are">
        <item quantity="one">There is</item>
        <item quantity="other">There are</item>
    </plurals>
    <plurals name="difference">
        <item quantity="one">There is a difference of %1$s day</item>
        <item quantity="other">There is a difference of %1$s days</item>
    </plurals>
    <string name="no_difference">There are no days between the dates</string>
    <string name="days_since_al">days since</string>
    <string name="days_until_al">days until</string>
    <string name="there_are_no_days_since">There are no days since %1$s. It is today!</string>
    <string name="ok">OK</string>
    <string name="number_of_days">Number of days</string>
    <string name="event">Event</string>
    <string name="there_is_nothing1">There is nothing here!</string>
    <string name="there_is_nothing2">Add some counters on your home screen or using the button at the bottom of the screen and you will be able to see and edit them here.</string>
    <string name="about_title">About</string>
    <string name="about_title_1">Licensing and GitHub</string>
    <string name="about_section_1">Day Counter is licensed under the MIT open source license, and the source code can be found on GitHub.</string>
    <string name="source_link">Source code available here</string>
    <string name="about_title_2">Reddit</string>
    <string name="about_section_2">Day Counter was created at the suggestion of a Reddit user (whose account has since been deleted).</string>
    <string name="reddit_link">Reddit comment available here</string>
    <string name="about_title_3">Donate</string>
    <string name="about_section_3">This app was created for free by a developer and a designer looking to improve their skills. If you would like to support us and the work we do, a donation would be greatly appreciated!</string>
    <string name="paypal_link">Donate here</string>
    <string name="until_or_since">Until or Since</string>
    <string name="event_desc">What is the event?</string>
    <string name="until_or_since_desc">Are you counting the days since an event, or until an event?</string>
    <string name="days_desc">How many days until/since the event?</string>
    <string name="input_something_error">You have to type something here</string>
    <string name="number_too_big_error">This number is too big!</string>
    <string name="kind_of_event_error">You have to select a kind of event</string>
    <string name="event_desc_image">Choose the date manually</string>
    <string name="custom_color_desc">Choose a custom color</string>
    <string name="info">Information about the app</string>
    <string name="delete">Delete this counter</string>
    <string name="configuration">Configuration</string>
    <string name="calculator">Day difference calculator</string>
    <string name="calculator_short">Calculator</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="calculate">Calculate</string>
    <string name="bad_format_title">Formatting error</string>
    <string name="bad_format_message">One of the dates you wrote is wrongly formatted</string>
    <string name="enable_notification">Show this counter as a notification</string>
    <string name="dark_theme">Toggle the dark theme</string>
    <string name="channel_description">Channel for all the day counters</string>
    <string name="reset_counter">Reset counter</string>
</resources>