<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytConfiguration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agusyc.daycounter.ConfigurationActivity"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp" >

    <com.agusyc.daycounter.MaterialSpinner
        android:id="@+id/spnType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ms_hint="@string/until_or_since"
        app:ms_enableFloatingLabel="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/btnDate"
                    android:layout_weight="4"
                    android:src="@drawable/event"
                    android:layout_gravity="center"
                    android:contentDescription="@string/event_desc_image" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <com.agusyc.daycounter.CustomTextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:helperText="@string/days_desc" >

                <EditText
                    android:id="@+id/edtDays"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:hint="@string/number_of_days"
                    android:textColorHint="@android:color/white"/>

            </com.agusyc.daycounter.CustomTextInputLayout>

        </LinearLayout>

        <com.agusyc.daycounter.CustomTextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:helperText="@string/event_desc" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect"
                android:hint="@string/event" />

        </com.agusyc.daycounter.CustomTextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Switch
            android:id="@+id/swtNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_notification"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.agusyc.daycounter.AutoGridLayout
            android:id="@+id/colorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnWidth="48dp"
            android:layout_gravity="center">

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#F44336"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#E91E63"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#9C27B0"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#673AB7"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#3F51B5"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#2196F3"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#03A9F4"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#009688"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#4CAF50"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#8BC34A"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#CDDC39"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#FFEB3B"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#FFC107"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#FF9800"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#FF5722"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#795548"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <com.agusyc.daycounter.ColorImageView
                app:picked_color="#607D8B"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp" />

            <ImageView
                android:id="@+id/btnCustomColor"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:padding="2dp"
                android:src="@drawable/custom_color"
                android:contentDescription="@string/custom_color_desc" />

        </com.agusyc.daycounter.AutoGridLayout>
    </LinearLayout>

</LinearLayout>